<resources>
    <string name="app_name">ACG+</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="chat">动画</string>
    <string name="contacts">漫画</string>
    <string name="discovery">游戏</string>
    <string name="me">我的</string>
    <string name="account">账号:</string>
    <string name="keyword">密码:</string>
    <string name="login_in">登录</string>
    <string name="forget">忘记密码</string>
    <string name="register">注册</string>
    <string name="inputAccount">请输入账号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="surePassword">确认密码：</string>
    <string name="inputPasswordAgain">请再次输入密码</string>
    <string name="Email">邮箱:</string>
    <string name="inputEmail">请输入邮箱</string>
    <string name="Name">用户名:</string>
    <string name="inputName">请输入用户名</string>
    <string name="publish">发表</string>
    <string name="commentText">评论数为:0</string>
    <string name="inputComment">请输入评论</string>
    <string name="load">加载更多</string>
    <string name="nickName">昵称:</string>
    <string name="sex">性别:</string>
    <string name="inputNick">请输入昵称</string>
    <string name="inputSex">男/女</string>
    <string name="accountImg">头像</string>
    <string name="sign">个人签名:</string>
    <string name="inputSign">请输入个人签名</string>
    <string name="changeInfo">修改信息</string>
    <string name="changePassword">修改密码</string>
    <string name="sure">确定</string>
    <string name="nothing">无</string>
    <string name="oldPassword">旧密码:</string>
    <string name="inputOldPassword">请输入旧密码</string>
    <string name="newPassword">新密码:</string>
    <string name="inputNewPassword">请输入新密码</string>
    <string name="newPasswordAgain">再次输入:</string>
    <string name="inputNewPasswordAgain">请再次输入新密码</string>
    <string name="hadPublish">已发布</string>
    <string name="hadComment">已评论</string>
    <string name="setting">设置</string>
    <string name="exit">注销</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
