<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:id="@+id/meAccountLine"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/accountInput"
                android:hint="@string/inputAccount"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:minWidth="200dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/nickNameLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/meAccountLine"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/nickNameInput"
                android:hint="@string/inputNick"
                android:minWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/sexLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/nickNameLinear"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/sexInput"
                android:hint="@string/inputSex"
                android:minWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageButton
            android:id="@+id/imgButton"
            android:background="@color/colorAccent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/accountImg"
            android:scaleType="fitCenter" app:srcCompat="@mipmap/ic_launcher"/>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/meEmailLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/sexLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/meEmailInput"
                android:hint="@string/inputEmail"
                android:minWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/meSignLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/meEmailLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:gravity="start"
                android:id="@+id/meSignInput"
                android:hint="@string/inputSign"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
    </LinearLayout>
    <Button
            android:layout_below="@+id/meSignLinear"
            android:id="@+id/changeSure"
            android:text="@string/sure"
            android:background="@drawable/login_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</RelativeLayout>