<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/oldPassword"
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/inputOldPassword"
                android:hint="@string/inputOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/newPassword"
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/inputNewPassword"
                android:hint="@string/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/newPasswordAgain"
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/inputNewPasswordAgain"
                android:hint="@string/inputNewPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
            android:layout_margin="20dp"
            android:background="@drawable/login_shape"
            android:text="@string/sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sureToChangePassword"/>
</LinearLayout>