<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:layout_marginTop="50dp"
            android:id="@+id/NameInput"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
        <TextView
                android:paddingLeft="30dp"
                android:text="@string/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:layout_weight="1"/>
        <EditText
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/inputName"
                android:id="@+id/NameEdit"
                android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
            android:layout_below="@+id/NameInput"
            android:id="@+id/accountInput"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">
        <TextView
                android:paddingLeft="40dp"
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"/>
        <EditText
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/inputAccount"
                android:id="@+id/accountEdit"
                android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/passwordInput"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountInput">
        <TextView
                android:paddingLeft="40dp"
                android:text="@string/keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"/>
        <EditText
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/inputPassword"
                android:id="@+id/passwordInputEdit"
                android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/passwordInputAgain"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordInput">
        <TextView
                android:paddingLeft="10dp"
                android:text="@string/surePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1"/>
        <EditText
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/inputPasswordAgain"
                android:id="@+id/passwordInputEditTwo"
                android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/emailLine"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordInputAgain">
        <TextView
                android:paddingLeft="40dp"
                android:text="@string/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1"/>
        <EditText
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/inputEmail"
                android:id="@+id/emailInputEdit"
                android:layout_weight="5"/>
    </LinearLayout>
    <Button
            android:layout_marginTop="50dp"
            android:background="@drawable/login_shape"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:layout_below="@+id/emailLine"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>