<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:id="@+id/meAccountLine"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/othersAccountInput"
                android:hint="@string/inputAccount"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:minWidth="200dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/nickNameLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/meAccountLine"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/othersNickNameInput"
                android:hint="@string/inputNick"
                android:minWidth="200dp"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/sexLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/nickNameLinear"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/othersSexInput"
                android:hint="@string/inputSex"
                android:minWidth="200dp"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageButton
            android:id="@+id/imgButton"
            android:background="@color/colorAccent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/accountImg"
            android:scaleType="fitCenter" app:srcCompat="@mipmap/ic_launcher"/>
    <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/meEmailLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/sexLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/othersEmailInput"
                android:hint="@string/inputEmail"
                android:minWidth="200dp"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/meSignLinear"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/meEmailLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="20dp"/>
        <EditText
                android:id="@+id/othersSignInput"
                android:hint="@string/nothing"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_below="@+id/meSignLinear"
            android:id="@+id/me_swipe_refresh_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/me_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>