<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/me_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
        <LinearLayout
                android:id="@+id/meAccountLine"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/accountInput"
                    android:hint="@string/inputAccount"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/nickNameLinear"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/meAccountLine"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/nickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/nickNameInput"
                    android:hint="@string/inputNick"
                    android:focusable="false"
                    android:minWidth="200dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/sexLinear"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/nickNameLinear"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/sexInput"
                    android:hint="@string/inputSex"
                    android:focusable="false"
                    android:minWidth="200dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageButton
                android:id="@+id/imgButton"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/accountImg"
                android:scaleType="fitCenter" tools:ignore="RtlHardcoded"/>
        <Button
                android:id="@+id/change"
                android:text="@string/change"
                android:background="@drawable/login_shape"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imgButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded"/>
        <Button
                android:id="@+id/sure"
                android:text="@string/sure"
                android:visibility="gone"
                android:background="@drawable/login_shape"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imgButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded"/>
        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/meEmailLinear"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/sexLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/meEmailInput"
                    android:hint="@string/inputEmail"
                    android:focusable="false"
                    android:minWidth="200dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/meSignLinear"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/meEmailLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:id="@+id/meSignInput"
                    android:focusable="false"
                    android:hint="@string/inputSign"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/me_swipe_refresh_layout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/me_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>

