<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/accountLinear"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
        <TextView
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/inputAccount"
                android:id="@+id/forgetAccountInput"
                android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ForgetEmail"
            android:layout_below="@+id/accountLinear"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType=""
                android:hint="@string/inputEmail"
                android:id="@+id/forgetEmailInput"
                android:layout_weight="5"/>
    </LinearLayout>
    <Button
            android:layout_marginTop="50dp"
            android:text="@string/forget"
            android:background="@drawable/login_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgetSendEmail"
            android:layout_below="@+id/ForgetEmail"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>