<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_chat"
            android:checked="true"
            android:text="@string/chat"
            android:drawableTop="@drawable/a_view"
            style="@style/style_RadioButton"/>

        <RadioButton
            android:id="@+id/rb_contacts"
            android:text="@string/contacts"
            android:drawableTop="@drawable/c_view"
            style="@style/style_RadioButton"/>

        <RadioButton
            android:id="@+id/rb_discovery"
            android:text="@string/discovery"
            android:drawableTop="@drawable/g_view"
            style="@style/style_RadioButton"/>

        <RadioButton
            android:id="@+id/rb_me"
            android:text="@string/me"
            android:drawableTop="@drawable/me_view"
            style="@style/style_RadioButton"/>
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/radioGroup" />
    <ImageButton
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:background="#00000000"
            app:srcCompat="@mipmap/add"
            android:id="@+id/add"/>
</RelativeLayout>
